// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ValidationSummary renders N/A when all components are valid 1`] = `
<Tooltip
  aria-label="Validations list"
  content={
    <Text
      className="f12qq397"
    >
      No Istio config objects found
    </Text>
  }
  enableFlip={true}
  position="auto"
>
  <div
    style={
      Object {
        "display": "inline-block",
        "marginLeft": "5px",
      }
    }
  >
    N/A
  </div>
</Tooltip>
`;

exports[`ValidationSummary renders error icon when all components are valid 1`] = `
<Tooltip
  aria-label="Validations list"
  content={
    <React.Fragment>
      <Text
        component="p"
        style={
          Object {
            "textAlign": "left",
            "textEmphasis": "strong",
          }
        }
      >
        Istio config objects analyzed: 
        1
      </Text>
      <div
        className="fe0pf1n"
      >
        <div>
          1 error found
        </div>
      </div>
    </React.Fragment>
  }
  enableFlip={true}
  position="auto"
>
  <Validation
    severity="error"
  />
</Tooltip>
`;

exports[`ValidationSummary renders error icon when all components are valid 2`] = `
<Tooltip
  aria-label="Validations list"
  content={
    <React.Fragment>
      <Text
        component="p"
        style={
          Object {
            "textAlign": "left",
            "textEmphasis": "strong",
          }
        }
      >
        Istio config objects analyzed: 
        3
      </Text>
      <div
        className="fe0pf1n"
      >
        <div>
          1 error found
        </div>
        <div>
          2 warnings found
        </div>
      </div>
    </React.Fragment>
  }
  enableFlip={true}
  position="auto"
>
  <Validation
    severity="error"
  />
</Tooltip>
`;

exports[`ValidationSummary renders success icon when all components are valid 1`] = `
<Tooltip
  aria-label="Validations list"
  content={
    <React.Fragment>
      <Text
        component="p"
        style={
          Object {
            "textAlign": "left",
            "textEmphasis": "strong",
          }
        }
      >
        Istio config objects analyzed: 
        1
      </Text>
      <div
        className="fe0pf1n"
      >
        <div>
          No issues found
        </div>
      </div>
    </React.Fragment>
  }
  enableFlip={true}
  position="auto"
>
  <Validation
    severity="correct"
  />
</Tooltip>
`;

exports[`ValidationSummary renders success icon when all components are valid 2`] = `
<Tooltip
  aria-label="Validations list"
  content={
    <React.Fragment>
      <Text
        component="p"
        style={
          Object {
            "textAlign": "left",
            "textEmphasis": "strong",
          }
        }
      >
        Istio config objects analyzed: 
        4
      </Text>
      <div
        className="fe0pf1n"
      >
        <div>
          No issues found
        </div>
      </div>
    </React.Fragment>
  }
  enableFlip={true}
  position="auto"
>
  <Validation
    severity="correct"
  />
</Tooltip>
`;

exports[`ValidationSummary renders warning icon when all components are valid 1`] = `
<Tooltip
  aria-label="Validations list"
  content={
    <React.Fragment>
      <Text
        component="p"
        style={
          Object {
            "textAlign": "left",
            "textEmphasis": "strong",
          }
        }
      >
        Istio config objects analyzed: 
        1
      </Text>
      <div
        className="fe0pf1n"
      >
        <div>
          1 warning found
        </div>
      </div>
    </React.Fragment>
  }
  enableFlip={true}
  position="auto"
>
  <Validation
    severity="warning"
  />
</Tooltip>
`;

exports[`ValidationSummary renders warning icon when all components are valid 2`] = `
<Tooltip
  aria-label="Validations list"
  content={
    <React.Fragment>
      <Text
        component="p"
        style={
          Object {
            "textAlign": "left",
            "textEmphasis": "strong",
          }
        }
      >
        Istio config objects analyzed: 
        3
      </Text>
      <div
        className="fe0pf1n"
      >
        <div>
          1 warning found
        </div>
      </div>
    </React.Fragment>
  }
  enableFlip={true}
  position="auto"
>
  <Validation
    severity="warning"
  />
</Tooltip>
`;
